syntax = "proto3";
package yoshino_s.soar_helper.v1;

option go_package = "gitlab.yoshino-s.xyz/yoshino-s/soar-helper/gen/v1";

message UnauthorRequest {
    repeated string targets = 1;
    int64 timeout = 2;
    int32 concurrent = 3;
    string protocol = 4;
}

message UnauthorResponse {
    string target = 1;
    bool success = 2;
    string result = 3;
    string error = 4;
    int64 time = 5;
}

message HttpxRequest {
    repeated string targets = 1;
    int64 timeout = 2;
    int32 concurrent = 3;
    string match_status_code = 4;
    string match_string = 5;

    bool screenshot = 6;
    bool upload = 7;

    bool follow_redirects = 8;
    bool follow_host_redirects = 9;
}

message HttpxResponse {
    string target = 1;
    bool success = 2;
    string result = 3;
    string error = 4;

    string screenshot = 5;
    string request = 6;

    string url = 7;
    int32 status_code = 8;
}

service ToolsService {
    rpc Unauthor(UnauthorRequest) returns (stream UnauthorResponse) {}
    rpc Httpx(HttpxRequest) returns (stream HttpxResponse) {}
}